Java 18 formatterPatternSwitch