@@ -1,2 +1,8 @@
 # java-release-18
 Java 18
+
+### Compile Source
+javac --enable-preview --release 18 src/demo/*.java -d bin
+
+### Run
+java --enable-preview -cp bin demo.TryJava18
